--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,24 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>登陆</title>
+    <meta charset="utf-8"/>
+    <title>Login | 大数据平台</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="Premium Multipurpose Admin & Dashboard Template" name="description"/>
+    <meta content="Themesdesign" name="author"/><!-- App favicon -->
+    <link rel="shortcut icon" href="../static/images/favicon.ico"><!-- Bootstrap Css -->
+    <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/><!-- Icons Css -->
+    <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
+    <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
 </head>
-<body>
-<h1>登陆</h1>
-<form method="post" action="/login" id="loginForm">
-    <div>
-        用户名：<input type="text" name="username" id="uname">
-    </div>
-    <div>
-        密码：<input type="password" name="password" id="upwd">
-    </div>
-    <span id="msg" style="font-size: 12px;color: red"></span>
-    <div>
-        <button type="button" id="loginBtn">立即登陆</button>
-    </div>
-</form>
+<body class="auth-body-bg">
 
+<div>
+    <div class="container-fluid p-0">
+        <div class="row no-gutters">
+            <div class="col-lg-4">
+                <div class="authentication-page-content p-4 d-flex align-items-center min-vh-100">
+                    <div class="w-100">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-9">
+                                <div>
+                                    <div class="text-center">
+                                        <div><a href="index.html" class="logo"><img src="../static/images/logo-dark1.png"
+                                                                                    height="60" alt="logo"></a></div>
+<!--                                        <h5 class="font-size-16 mt-4">欢迎回来！</h5>-->
+                                        <p class="text-muted">欢迎回来！请登录</p></div>
+                                    <div class="p-2 mt-5">
+                                        <form class="form-horizontal" method="post" action="/login" id="loginForm">
+                                            <div class="form-group auth-form-group-custom mb-4"><i
+                                                    class="ri-user-2-line auti-custom-input-icon"></i><label
+                                                    for="uname">用户名</label><input type="text"
+                                                                                          class="form-control"
+                                                                                          name="username"
+                                                                                          id="uname"
+                                                                                          placeholder="输入用户名">
+                                            </div>
+                                            <div class="form-group auth-form-group-custom mb-4"><i
+                                                    class="ri-lock-2-line auti-custom-input-icon"></i><label
+                                                    for="upwd">密码</label><input type="password"
+                                                                                              class="form-control"
+                                                                                name="password"
+                                                                                              id="upwd"
+                                                                                              placeholder="输入密码">
+                                                <span id="msg" style="font-size: 12px;color: red"></span>
+                                            </div>
+
+                                            <div class="custom-control custom-checkbox"><input type="checkbox"
+                                                                                               class="custom-control-input"
+                                                                                               id="customControlInline"><label
+                                                    class="custom-control-label" for="customControlInline">记住密码</label></div>
+                                            <div class="mt-4 text-center">
+                                                <button class="btn btn-primary w-md waves-effect waves-light"
+                                                        type="button" id="loginBtn">登录
+                                                </button>
+                                            </div>
+                                            <div class="mt-4 text-center"><a href="auth-recoverpw.html"
+                                                                             class="text-muted"><i
+                                                    class="mdi mdi-lock mr-1"></i>忘记密码?</a></div>
+                                        </form>
+                                    </div>
+                                    <div class="mt-5 text-center"><p>还没有账户 ? <a
+                                            href="auth-register.html"
+                                            class="font-weight-medium text-primary">注册 </a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="authentication-bg">
+                    <div class="bg-overlay"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div><!-- JAVASCRIPT -->
 <script src="../static/libs/jquery/jquery.min.js"></script>
 <script>
     $('#loginBtn').click(function(){
@@ -38,8 +98,6 @@
 
     /**
      * 判断字符串是否为空，为空返回true，否则返回false
-     * @param str
-     * @returns {boolean}
      */
     function isEmpty(str){
         if(str == null || str.trim() == ""){
@@ -48,6 +106,8 @@
         return false;
     }
 </script>
-s
 </body>
+
+
+
 </html>
