添加了生产计划页面

--- a/src/main/resources/templates/kanban-shebeiguochengcanshu.html
+++ b/src/main/resources/templates/kanban-shebeiguochengcanshu.html
@@ -165,6 +165,8 @@
 
                     <li><a th:href="@{/cutter}" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>刀具分析</span></a></li>
 
+                    <li><a th:href="@{/productionplan}" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>生产计划</span></a></li>
+
                 </ul>
             </div><!-- Sidebar -->
         </div></div></div></div><div class="simplebar-placeholder" style="width: auto; height: 524px;"></div></div><div class="simplebar-track simplebar-horizontal" style="visibility: hidden;"><div class="simplebar-scrollbar" style="transform: translate3d(0px, 0px, 0px); display: none;"></div></div><div class="simplebar-track simplebar-vertical" style="visibility: hidden;"><div class="simplebar-scrollbar" style="transform: translate3d(0px, 0px, 0px); display: none;"></div></div></div>
