--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -156,6 +156,8 @@
 
                     <li><a th:href="@{/cutter}" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>刀具分析</span></a></li>
 
+                    <li><a th:href="@{/productionplan}" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>生产计划</span></a></li>
+
                 </ul>
             </div><!-- Sidebar -->
 
