--- a/src/main/resources/templates/knifes.html
+++ b/src/main/resources/templates/knifes.html
@@ -2,10 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
-    <title>Dashboard | Nazox - Responsive Bootstrap 4 Admin Dashboard</title>
+    <title>工业大数据平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
-    <meta content="Themesdesign" name="author" /><!-- App favicon -->
+    <meta content="This is an industrial big data platform page" name="description" />
     <link rel="shortcut icon" href="../static/images/favicon.ico"><!-- jquery.vectormap css -->
     <link href="../static/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css" /><!-- DataTables -->
     <link href="../static/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" /><!-- Responsive datatable examples -->
