--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8"/>
-    <title>Login | 大数据平台</title>
+    <meta charset="utf-8" />
+    <title>工业大数据平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Premium Multipurpose Admin & Dashboard Template" name="description"/>
-    <meta content="Themesdesign" name="author"/><!-- App favicon -->
+    <meta content="This is an industrial big data platform page" name="description" />
     <link rel="shortcut icon" href="../static/images/favicon.ico"><!-- Bootstrap Css -->
     <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/><!-- Icons Css -->
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
