--- a/src/main/resources/templates/knifes.html
+++ b/src/main/resources/templates/knifes.html
@@ -18,189 +18,11 @@
 
 <body data-sidebar="light" ><!-- Begin page -->
 <div id="layout-wrapper">
-    <header id="page-topbar">
-        <div class="navbar-header">
-            <div class="d-flex"><!-- LOGO -->
-                <div class="navbar-brand-box"><a href="index.html" class="logo logo-dark"><span class="logo-sm"><img
-                        src="../static/images/logo-sm-dark.png" alt="" height="22"></span><span class="logo-lg"><img
-                        src="../static/images/logo-dark1.png" alt="" height="55"></span></a><a href="index.html"
-                                                                                           class="logo logo-light"><span
-                        class="logo-sm"><img src="../static/images/logo-sm-light.png" alt="" height="22"></span><span
-                        class="logo-lg"><img src="../static/images/logo-light.png" alt="" height="20"></span></a></div>
-                <button type="button" class="btn btn-sm px-3 font-size-24 header-item waves-effect"
-                        id="vertical-menu-btn"><i class="ri-menu-2-line align-middle"></i></button><!-- App Search-->
-                <form class="app-search d-none d-lg-block">
-                    <div class="position-relative"><input type="text" class="form-control" placeholder="Search..."><span
-                            class="ri-search-line"></span></div>
-                </form>
-                <div class="dropdown dropdown-mega d-none d-lg-block ml-2">
-                    <button type="button" class="btn header-item waves-effect" data-toggle="dropdown"
-                            aria-haspopup="false" aria-expanded="false">Mega Menu <i class="mdi mdi-chevron-down"></i>
-                    </button>
-                    <div class="dropdown-menu dropdown-megamenu">
-                        <div class="row">
-                            <div class="col-sm-8">
-                                <div class="row">
-                                    <div class="col-md-4"><h5 class="font-size-14 mt-0">UI Components</h5>
-                                        <ul class="list-unstyled megamenu-list">
-                                            <li><a href="javascript:void(0);">Lightbox</a></li>
-                                            <li><a href="javascript:void(0);">Range Slider</a></li>
-                                            <li><a href="javascript:void(0);">Sweet Alert</a></li>
-                                            <li><a href="javascript:void(0);">Rating</a></li>
-                                            <li><a href="javascript:void(0);">Forms</a></li>
-                                            <li><a href="javascript:void(0);">Tables</a></li>
-                                            <li><a href="javascript:void(0);">Charts</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-md-4"><h5 class="font-size-14 mt-0">Applications</h5>
-                                        <ul class="list-unstyled megamenu-list">
-                                            <li><a href="javascript:void(0);">Ecommerce</a></li>
-                                            <li><a href="javascript:void(0);">Calendar</a></li>
-                                            <li><a href="javascript:void(0);">Email</a></li>
-                                            <li><a href="javascript:void(0);">Projects</a></li>
-                                            <li><a href="javascript:void(0);">Tasks</a></li>
-                                            <li><a href="javascript:void(0);">Contacts</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-md-4"><h5 class="font-size-14 mt-0">Extra Pages</h5>
-                                        <ul class="list-unstyled megamenu-list">
-                                            <li><a href="javascript:void(0);">Light Sidebar</a></li>
-                                            <li><a href="javascript:void(0);">Compact Sidebar</a></li>
-                                            <li><a href="javascript:void(0);">Horizontal layout</a></li>
-                                            <li><a href="javascript:void(0);">Maintenance</a></li>
-                                            <li><a href="javascript:void(0);">Coming Soon</a></li>
-                                            <li><a href="javascript:void(0);">Timeline</a></li>
-                                            <li><a href="javascript:void(0);">FAQs</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="row">
-                                    <div class="col-sm-6"><h5 class="font-size-14 mt-0">UI Components</h5>
-                                        <ul class="list-unstyled megamenu-list">
-                                            <li><a href="javascript:void(0);">Lightbox</a></li>
-                                            <li><a href="javascript:void(0);">Range Slider</a></li>
-                                            <li><a href="javascript:void(0);">Sweet Alert</a></li>
-                                            <li><a href="javascript:void(0);">Rating</a></li>
-                                            <li><a href="javascript:void(0);">Forms</a></li>
-                                            <li><a href="javascript:void(0);">Tables</a></li>
-                                            <li><a href="javascript:void(0);">Charts</a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-sm-5">
-                                        <div><img src="../static/images/megamenu-img.png" alt=""
-                                                  class="img-fluid mx-auto d-block"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="d-flex">
-                <div class="dropdown d-inline-block d-lg-none ml-2">
-                    <button type="button" class="btn header-item noti-icon waves-effect"
-                            id="page-header-search-dropdown" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"><i class="ri-search-line"></i></button>
-                    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right p-0"
-                         aria-labelledby="page-header-search-dropdown">
-                        <form class="p-3">
-                            <div class="form-group m-0">
-                                <div class="input-group"><input type="text" class="form-control"
-                                                                placeholder="Search ...">
-                                    <div class="input-group-append">
-                                        <button class="btn btn-primary" type="submit"><i class="ri-search-line"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
 
-                <div class="dropdown d-none d-lg-inline-block ml-1">
-                    <button type="button" class="btn header-item noti-icon waves-effect" data-toggle="fullscreen"><i
-                            class="ri-fullscreen-line"></i></button>
-                </div>
+    <!--topbar and leftbar start-->
+    <div th:include="~{common::TopAndLeft}"></div>
+    <!--topbar and leftbar end-->
 
-                <div class="dropdown d-inline-block user-dropdown">
-                    <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img
-                            class="rounded-circle header-profile-user" src="../static/images/users/avatar-2.jpg"
-                            alt="Header Avatar"><span class="d-none d-xl-inline-block ml-1">Kevin</span><i
-                            class="mdi mdi-chevron-down d-none d-xl-inline-block"></i></button>
-                    <div class="dropdown-menu dropdown-menu-right"><!-- item--><a class="dropdown-item" href="#"><i
-                            class="ri-user-line align-middle mr-1"></i>Profile</a><a class="dropdown-item" href="#"><i
-                            class="ri-wallet-2-line align-middle mr-1"></i>My Wallet</a><a class="dropdown-item d-block"
-                                                                                           href="#"><span
-                            class="badge badge-success float-right mt-1">11</span><i
-                            class="ri-settings-2-line align-middle mr-1"></i>Settings</a><a class="dropdown-item"
-                                                                                            href="#"><i
-                            class="ri-lock-unlock-line align-middle mr-1"></i>Lock screen</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-danger" href="#"><i
-                                class="ri-shut-down-line align-middle mr-1 text-danger"></i>Logout</a></div>
-                </div>
-                <div class="dropdown d-inline-block">
-                    <button type="button" class="btn header-item noti-icon right-bar-toggle waves-effect"><i
-                            class="ri-settings-2-line"></i></button>
-                </div>
-            </div>
-        </div>
-    </header><!-- ========== Left Sidebar Start ========== -->
-    <div class="vertical-menu">
-        <div data-simplebar class="h-100">
-            <!--- Sidemenu -->
-            <div id="sidebar-menu">
-                <!-- Left Menu Start -->
-                <ul class="metismenu list-unstyled mm-show" id="side-menu">
-                    <li class="menu-title">菜单</li>
-                    <li class="mm-active"><a th:href="@{/main}" class="waves-effect active"><i class="ri-dashboard-line"></i>
-                        <span class="badge badge-pill badge-success float-right">99+</span>
-                        <span>主页</span></a></li>
-                    <li><a href="javascript: void(0);" class="has-arrow waves-effect"><i class="ri-calendar-2-line"></i><span>设备状态看板</span></a>
-
-                        <ul class="sub-menu mm-collapse" aria-expanded="false">
-                            <li><a th:href="@{/instance_status}">即时状态查看</a></li>
-                            <li><a th:href="@{/alarm_record}">报警记录分析</a></li>
-                            <li><a th:href="@{/count_analysis}">设备产量计数分析</a></li>
-                            <li><a th:href="@{/board_deviceParameter}">设备过程参数</a></li>
-
-                        </ul>
-
-                    </li>
-
-                    <li><a href="javascript: void(0);" class="has-arrow waves-effect"><i class="ri-calendar-2-line"></i><span>实时数据看板</span></a>
-                        <ul class="sub-menu mm-collapse" aria-expanded="false">
-                            <li><a th:href="@{/use_ratio}">设备利用率</a></li>
-                            <li><a th:href="@{/activation}">设备稼动率</a></li>
-                        </ul>
-                    </li>
-
-                    <li><a href="javascript: void(0);" class="has-arrow waves-effect"><i class="ri-store-2-line"></i><span>产量分析看板</span></a>
-
-                        <ul class="sub-menu mm-collapse" aria-expanded="false">
-                            <li><a th:href="@{/output}">产量数据</a></li>
-                            <li><a th:href="@{/pruduct_information}">产品信息</a></li>
-
-                        </ul>
-
-                    </li>
-
-                    <li><a th:href="@{/status_distribute}" class="waves-effect"><i class="ri-mail-send-line"></i><span>状态分布看板</span></a>
-                    </li>
-
-                    <li><a th:href="@{/OEE}" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>整线OEE分析</span></a></li>
-
-                    <li><a th:href="@{/cutter}" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>刀具分析</span></a></li>
-
-                    <li><a th:href="@{/productionplan}" class=" waves-effect"><i class="ri-artboard-2-line"></i><span>生产计划</span></a></li>
-
-                </ul>
-            </div><!-- Sidebar -->
-        </div>
-    </div><!-- Left Sidebar End -->
     <!-- Start right Content here --><!-- ============================================================== -->
     <div class="main-content">
         <div class="page-content">
