--- a/src/main/resources/templates/kanban-baojingjilu.html
+++ b/src/main/resources/templates/kanban-baojingjilu.html
@@ -220,7 +220,7 @@
                     <div class="col-lg-5 border-primary border card">
                         <div class="card bg-primary text-white-50">
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
-                                    class="mdi mdi-bullseye-arrow mr-3"></i>device_name</h5>
+                                    class="mdi mdi-check-all mr-3"></i>device_name</h5>
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[设定]</span>
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
@@ -240,8 +240,8 @@
                     <div class="col-lg-5 border-success border card">
                         <div class="card bg-success text-white-50">
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
-                                    class="mdi mdi-bullseye-arrow mr-3"></i>device_name</h5>
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[运行]</span>
+                                    class="mdi mdi-recycle-variant mr-3"></i>device_name</h5>
+                                &nbsp;&nbsp;<span class="zhuangT0" id="state">&nbsp;[运行]</span>
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
@@ -264,7 +264,7 @@
                     <div class="col-lg-5 border-danger border card">
                         <div class="card bg-danger text-white-50">
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
-                                    class="mdi mdi-bullseye-arrow mr-3"></i>device_name</h5>
+                                    class="mdi mdi-block-helper mr-3"></i>device_name</h5>
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[停机]</span>
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
@@ -285,7 +285,7 @@
                     <div class="col-lg-5 border-warning border card">
                         <div class="card bg-warning text-white-50">
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
-                                    class="mdi mdi-bullseye-arrow mr-3"></i>device_name</h5>
+                                    class="mdi mdi-album mr-3"></i>device_name</h5>
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[空闲]</span>
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
@@ -308,7 +308,7 @@
                     <div class="col-lg-5 border-gray border card">
                         <div class="card bg-gray text-white-50">
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
-                                    class="mdi mdi-bullseye-arrow mr-3"></i>device_name</h5>
+                                    class="mdi mdi-alarm-note-off mr-3"></i>device_name</h5>
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[离线]</span>
                                 &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
@@ -325,8 +325,7 @@
                         </div>
                     </div>
                 </div><!-- end row -->
-
-
+                
             </div><!-- container-fluid --></div>
     </div><!-- end main content--></div>
 <!-- Right Sidebar -->
