--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -115,8 +115,8 @@
                                                                                             href="#"><i
                             class="ri-lock-unlock-line align-middle mr-1"></i>Lock screen</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-danger" th:href="@{/login}"><i
-                                class="ri-shut-down-line align-middle mr-1 text-danger"></i>Logout</a>
+
+                        <button class="dropdown-item text-danger ri-shut-down-line align-middle mr-1 text-danger" onclick="window.location.href='/logout'">Logout</button>
                     </div>
                 </div>
                 <div class="dropdown d-inline-block">
